update dependencies and add circleci config